contain filter size and view filters button wrapping fix

--- a/foundations_ui/src/scss/theme/shared.scss
+++ b/foundations_ui/src/scss/theme/shared.scss
@@ -319,7 +319,7 @@ hr {
   }
 }
 
-@media only screen and (max-width: 1280px) {
+@media only screen and (max-width: 1415px) {
   html {
     zoom: 0.75;
   }
