--- a/foundations_ui/src/scss/views/job-header.scss
+++ b/foundations_ui/src/scss/views/job-header.scss
@@ -101,20 +101,19 @@
     margin-left: $overview-content-margin-horizontal;
 
     > div {
+      display: inline-block;
+      vertical-align: top;
+      border-bottom: 1px solid $color-border-bottom;
+      width: 685px;
+
       &:nth-of-type(2){
         margin-left: 15px;
         width: 121px;
         border-right: 1px solid $color-border-bottom;
         border-bottom: none;
       }
-    }
 
-    > div {
-      display: inline-block;
-      vertical-align: top;
-      border-bottom: 1px solid $color-border-bottom;
-      width: 685px;
-        > div {
+      > div {
         display: inline-block;
         vertical-align: top;
         width: 595px;
@@ -174,3 +173,13 @@
       }
     }
   }
+
+
+@media only screen and (max-width: $minimum-screen-width) {
+  .job-header-sorting-container {
+    > div {
+      width: 365px;
+    }
+  }
+}
+
